--- a/kitty/.config/kitty/kitty-themes/01-Wallust.conf
+++ b/kitty/.config/kitty/kitty-themes/01-Wallust.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #E4C9D6
-background         #2A2331
-cursor             #BF8DB1
+foreground         #CAD6E8
+background         #151516
+cursor             #6F7680
 
-active_tab_foreground     #2A2331
-active_tab_background     #E4C9D6
-inactive_tab_foreground   #E4C9D6
-inactive_tab_background   #2A2331
+active_tab_foreground     #151516
+active_tab_background     #CAD6E8
+inactive_tab_foreground   #CAD6E8
+inactive_tab_background   #151516
 
-active_border_color   #E4C9D6
-inactive_border_color #2A2331
-bell_border_color     #270B48
+active_border_color   #CAD6E8
+inactive_border_color #151516
+bell_border_color     #0F1012
 
-color0      #514858
-color1		#270B48
-color2		#723E69
-color3		#743E69
-color4		#743E69
-color5		#864B68
-color6		#864B68
-color7		#D1A9BD
-color8		#927684
-color9		#340F60
-color10		#99528C
-color11		#9A538C
-color12		#9A538C
-color13		#B3648B
-color14		#B3648B
-color15		#D1A9BD
+color0      #3C3C3D
+color1		#0F1012
+color2		#0F1012
+color3		#293251
+color4		#293251
+color5		#2B3557
+color6		#4D688D
+color7		#ABBCD5
+color8		#778495
+color9		#141518
+color10		#141518
+color11		#36426C
+color12		#36426C
+color13		#394774
+color14		#678ABC
+color15		#ABBCD5
