--- a/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -32,6 +32,8 @@ $UserConfigs = $HOME/.config/hypr/UserConfigs
 bindd = $mainMod SHIFT, B, open opera (netflix), exec, opera
 unbind = $mainMod, D, app launcher, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window
 bindd = $mainMod, R, app launcher, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window
+bindd = $mainMod, D, open discord, exec, discord
+bindd = $mainMod, O, open spotify, exec, spotify-launcher
 
 
 # For passthrough keyboard into a VM
