Fix CPU formatting

--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -24,7 +24,7 @@
         "type": "cpu",
         "key": "│ ├󰻠",
         "keyColor": "cyan",
-        "format": "{1} ({5}) @ {6} GHz"
+        "format": "{1} ({5}) @ {6}"
       },
       {
         "type": "gpu",
