Disable layout switch keybind

--- a/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -35,6 +35,8 @@ bindd = $mainMod, R, app launcher, exec, pkill rofi || true && rofi -show drun -
 bindd = $mainMod, D, open discord, exec, discord
 bindd = $mainMod, O, open spotify, exec, spotify-launcher
 
+unbind = ALT_L, SHIFT_L, switch keyboard layout globally, exec, $scriptsDir/SwitchKeyboardLayout.sh
+unbind = SHIFT_L, ALT_L, switch keyboard layout per-window, exec, $scriptsDir/Tak0-Per-Window-Switch.sh
 
 # For passthrough keyboard into a VM
 # bind = $mainMod ALT, P, submap, passthru
