Vim page scroll in kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -32,3 +32,6 @@ selection_background none
 foreground #dddddd
 background #000000
 cursor #dddddd
+
+map ctrl+d remote_control scroll-window 0.5p
+map ctrl+u remote_control scroll-window 0.5p-
