Auto vibrance with hyprshade

--- a/hypr/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -13,3 +13,6 @@ exec-once = $SwwwRandom2 $wallDIR # random wallpaper switcher every 30 minutes
 
 # JamesDSP
 exec-once = jamesdsp -t
+
+# Hyprshade vibrance
+exec = hyprshade on vibrance2
