--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -33,5 +33,5 @@ foreground #dddddd
 background #000000
 cursor #dddddd
 
-map ctrl+d remote_control scroll-window 0.5p
-map ctrl+u remote_control scroll-window 0.5p-
+map ctrl+shift+d remote_control scroll-window 0.5p
+map ctrl+shift+u remote_control scroll-window 0.5p-
