--- a/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -29,9 +29,15 @@ $UserConfigs = $HOME/.config/hypr/UserConfigs
 # E.g.
 # bindd = $mainMod, Z, My z app, exec APPNAME
 
-bindd = $mainMod SHIFT, B, open opera (netflix), exec, opera
+unbind = $mainMod, G, toggle group, togglegroup
+
+unbind = $mainMod, A, desktop overview, exec, $scriptsDir/OverviewToggle.sh # toggles quickshell or ags overview (tries QS first, falls back to AGS)
+bindd = $mainMod CTRL, tab, desktop overview, exec, $scriptsDir/OverviewToggle.sh # toggles quickshell or ags overview (tries QS first, falls back to AGS)
+
 unbind = $mainMod, D, app launcher, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window
 bindd = $mainMod, R, app launcher, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window
+
+bindd = $mainMod SHIFT, B, open opera (netflix), exec, opera
 bindd = $mainMod, D, open discord, exec, discord
 bindd = $mainMod, O, open spotify, exec, spotify-launcher
 
