Random WP for Laptop

--- a/hypr/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -5,11 +5,13 @@ $wallDIR=$HOME/Pictures/wallpapers
 $lock = $scriptsDir/LockScreen.sh
 $SwwwRandom1 = $UserScripts/WallpaperAutoChange-1.sh
 $SwwwRandom2 = $UserScripts/WallpaperAutoChange-2.sh
+$SwwwRandomLap = $UserScripts/WallpaperAutoChange-Lap.sh
 $livewallpaper=""
 
 # wallpaper random
-exec-once = $SwwwRandom1 $wallDIR # random wallpaper switcher every 30 minutes
-exec-once = $SwwwRandom2 $wallDIR # random wallpaper switcher every 30 minutes
+exec-once = $SwwwRandom1 $wallDIR # random wallpaper switcher (DP-2) every 20 minutes
+exec-once = $SwwwRandom2 $wallDIR # random wallpaper switcher (DP-1) every 20 minutes
+exec-once = $SwwwRandomLap $wallDIR # random wallpaper switcher (eDP-1) every 15 minutes
 
 # JamesDSP
 exec-once = jamesdsp -t
