Cleanup zshrc; tweak kitty; tweak setup

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,6 +15,7 @@ confirm_os_window_close 0
 
 # Animated cursor
 cursor_trail 1
+cursor_trail_decay 0.1 0.25
 
 # change to x11 or wayland or leave auto
 linux_display_server auto
@@ -22,7 +23,7 @@ linux_display_server auto
 scrollback_lines 2000
 wheel_scroll_min_lines 1
 
-enable_audio_bell no
+enable_audio_bell yes
 
 window_padding_width 4
 
