--- a/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -43,6 +43,7 @@ bindd = $mainMod, O, open spotify, exec, spotify-launcher
 
 unbind = ALT_L, SHIFT_L, switch keyboard layout globally, exec, $scriptsDir/SwitchKeyboardLayout.sh
 unbind = SHIFT_L, ALT_L, switch keyboard layout per-window, exec, $scriptsDir/Tak0-Per-Window-Switch.sh
+# bindd = $mainMod, space, switch keyboard layout globally, exec, $scriptsDir/SwitchKeyboardLayout.sh
 
 # For passthrough keyboard into a VM
 # bind = $mainMod ALT, P, submap, passthru
