--- a/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -41,9 +41,10 @@ bindd = $mainMod SHIFT, B, open opera (netflix), exec, opera
 bindd = $mainMod, D, open discord, exec, discord
 bindd = $mainMod, O, open spotify, exec, spotify-launcher
 
+# Keyboard variant switch: unbind defaults, rebind in UserSettings.conf
 unbind = ALT_L, SHIFT_L, switch keyboard layout globally, exec, $scriptsDir/SwitchKeyboardLayout.sh
 unbind = SHIFT_L, ALT_L, switch keyboard layout per-window, exec, $scriptsDir/Tak0-Per-Window-Switch.sh
-# bindd = $mainMod, space, switch keyboard layout globally, exec, $scriptsDir/SwitchKeyboardLayout.sh
+unbind = $mainMod, SPACE, Float current window, togglefloating,
 
 # For passthrough keyboard into a VM
 # bind = $mainMod ALT, P, submap, passthru
