--- a/hypr/.config/hypr/UserConfigs/UserSettings.conf
+++ b/hypr/.config/hypr/UserConfigs/UserSettings.conf
@@ -8,3 +8,39 @@
 #
 # Look on ~/.config/hypr/configs/SystemSettings.conf to know how to modify this
 
+input {
+  kb_layout = fr,fr
+  kb_variant = ergol,azerty
+  kb_model =
+  kb_options = grp:ctrls_toggle
+  kb_rules =
+  repeat_rate = 40
+  repeat_delay = 230
+  
+  sensitivity = 0 #mouse sensitivity
+  #accel_profile =     # flat or adaptive or blank or EMPTY means libinput’s default mode
+  numlock_by_default = true
+  left_handed = false
+  follow_mouse = 1
+  float_switch_override_focus = false
+
+  touchpad {
+    disable_while_typing = true
+    natural_scroll = true 
+    clickfinger_behavior = false
+    middle_button_emulation = false
+    tap-to-click = true
+    drag_lock = false
+  }
+  
+  # below for devices with touchdevice ie. touchscreen
+	touchdevice {
+		enabled = true
+	}
+	
+	# below is for table see link above for proper variables
+	tablet {
+		transform = 0
+		left_handed = 0
+	}
+}
