--- a/kanata/.config/kanata/kanata.service
+++ b/kanata/.config/kanata/kanata.service
@@ -3,7 +3,7 @@ Description=Kanata keyboard remapper
 Documentation=https://github.com/jtroo/kanata
 
 [Service]
-Environment=PATH=/usr/local/bin:/usr/local/sbin:/usr/bin:/bin:/home/linuxbrew/.linuxbrew/bin
+Environment=PATH=/usr/local/bin:/usr/local/sbin:/usr/bin:/bin
 #   Uncomment the 4 lines beneath this to increase process priority
 #   of Kanata in case you encounter lagginess when resource constrained.
 #   WARNING: doing so will require the service to run as an elevated user such as root.
@@ -14,7 +14,7 @@ Environment=PATH=/usr/local/bin:/usr/local/sbin:/usr/bin:/bin:/home/linuxbrew/.l
 # IOSchedulingClass=realtime
 # Nice=-20
 Type=simple
-ExecStart=/home/linuxbrew/.linuxbrew/bin/kanata --cfg /etc/kanata/config.kbd 
+ExecStart=/usr/bin/kanata --cfg /etc/kanata/config.kbd 
 Restart=on-failure
 RestartSec=3
 
