--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,7 +1,7 @@
 # Application bindings
 bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
-bindd = SUPER SHIFT, B, Browser, exec, omarchy-launch-browser
+bindd = SUPER, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
 bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
@@ -27,3 +27,5 @@ bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/c
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+unbind = SUPER, W
+bindd = SUPER, Q, Close window, killactive,
