--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,6 +1,6 @@
 # Application bindings
 bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER, E, File manager, exec, uwsm-app -- thunar
+bindd = SUPER, E, File manager, exec, uwsm-app -- thunar --new-window
 bindd = SUPER, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
 bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
