--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -29,3 +29,11 @@ bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/c
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
 unbind = SUPER, W
 bindd = SUPER, Q, Close window, killactive,
+
+# # Only display the OSD on the currently focused monitor
+# $osdclient = swayosd-client --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.focused == true).name')"
+#
+# unbind = XF86AudioRaiseVolume
+# unbind = XF86AudioLowerVolume
+# bindeld = XF86AudioRaiseVolume, Volume up precise, exec, $osdclient --output-volume +2
+# bindeld = XF86AudioLowerVolume, Volume down precise, exec, $osdclient --output-volume -2
