--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -7,15 +7,14 @@ general {
     gaps_out = 4
     border_size = 1
 
-    # Use master layout instead of dwindle
-    # layout = master
+    allow_tearing = false
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
   rounding = 4
          
-  active_opacity = 1.0
+  active_opacity = 1.1
   inactive_opacity = 0.9
   fullscreen_opacity = 1.0
 
@@ -34,14 +33,44 @@ decoration {
     enabled = true
     size = 1
     passes = 1
-    ignore_opacity = false
+    ignore_opacity = true
     new_optimizations = true
-    special = true
+    special = false
     popups = true
+    brightness = 0.7
+    contrast = 1.0
   }
 }
-# https://wiki.hypr.land/Configuring/Dwindle-Layout/
-dwindle {
-    # Avoid overly wide single-window layouts on wide screens
-    # single_window_aspect_ratio = 1 1
+
+# https://wiki.hyprland.org/Configuring/Variables/#animations
+animations {
+    enabled = yes, please :)
+
+    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
+
+    animation = global, 1, 10, default
+
+    animation = windows, 1, 4.79, easeOutQuint
+        animation = windowsMove, 1, 1.00, easeOutQuint
+        animation = windowsIn, 1, 1.0, easeOutQuint, popin 87%
+        animation = windowsOut, 1, 0.90, linear, popin 87%
+
+    animation = layers, 1, 3.81, easeOutQuint
+        animation = layersIn, 1, 2, easeOutQuint, fade
+        animation = layersOut, 1, 0.75, linear, fade
+
+    animation = fade, 1, 2.00, quick
+        animation = fadeIn, 1, 0.85, almostLinear
+        animation = fadeOut, 1, 0.75, almostLinear
+        animation = fadeLayersIn, 1, 0.90, almostLinear
+        animation = fadeLayersOut, 1, 0.70, almostLinear
+
+    animation = border, 1, 5.39, easeOutQuint
+    animation = workspaces, 0, 0, ease
 }
