--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -1,39 +1,62 @@
+# Remove default bindings
+unbind = SUPER, W
+unbind = SUPER, G
+unbind = SUPER, SPACE
+unbind = SUPER ALT, S
+unbind = ,XF86AudioRaiseVolume
+unbind = ,XF86AudioLowerVolume
+unbind = ALT, XF86AudioRaiseVolume
+unbind = ALT, XF86AudioLowerVolume
+
 # Application bindings
 bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, E, File manager, exec, uwsm-app -- thunar
 bindd = SUPER, B, Browser, exec, omarchy-launch-browser
-bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
-bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
-bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
+bindd = SUPER SHIFT, B, Neflix (Opera), exec, opera
+bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
-bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
-bindd = SUPER SHIFT, G, Signal, exec, omarchy-launch-or-focus ^signal$ "uwsm-app -- signal-desktop"
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora --enable-wayland-ime
 bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
+# bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
 bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT ALT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
 bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
-bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
-bindd = SUPER SHIFT ALT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
-bindd = SUPER SHIFT CTRL, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
+bindd = SUPER, Y, YouTube, exec, xdg-open "https://youtube.com/"
+bindd = SUPER, W, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
+bindd = SUPER, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
+bindd = SUPER ALT, G, Signal, exec, omarchy-launch-or-focus ^signal$ "uwsm-app -- signal-desktop"
 bindd = SUPER SHIFT, P, Google Photos, exec, omarchy-launch-or-focus-webapp "Google Photos" "https://photos.google.com/"
-bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
-bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
-# Overwrite existing bindings, like putting Omarchy Menu on Super + Space
-# unbind = SUPER, SPACE
-# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
-unbind = SUPER, W
+# My bindings
+bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+bindd = SUPER, R, Launch apps, exec, omarchy-launch-walker
+
 bindd = SUPER, Q, Close window, killactive,
+bindd = CTRL ALT, DELETE, Close all windows, exec, omarchy-hyprland-window-close-all
 
-# # Only display the OSD on the currently focused monitor
-# $osdclient = swayosd-client --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.focused == true).name')"
-#
-# unbind = XF86AudioRaiseVolume
-# unbind = XF86AudioLowerVolume
-# bindeld = XF86AudioRaiseVolume, Volume up precise, exec, $osdclient --output-volume +2
-# bindeld = XF86AudioLowerVolume, Volume down precise, exec, $osdclient --output-volume -2
+bindd = SUPER SHIFT, S, Move window to scratchpad, movetoworkspacesilent, special:scratchpad
+
+# Invert volume controls
+bindeld = ,XF86AudioRaiseVolume, Volume up precise, exec, $osdclient --output-volume +2
+bindeld = ,XF86AudioLowerVolume, Volume down precise, exec, $osdclient --output-volume -2
+bindeld = ALT, XF86AudioRaiseVolume, Volume up, exec, $osdclient --output-volume raise
+bindeld = ALT, XF86AudioLowerVolume, Volume down, exec, $osdclient --output-volume lower
+
+### Reminders
+
+# # Copy / Paste
+# bindd = SUPER, C, Universal copy, sendshortcut, CTRL, Insert,
+# bindd = SUPER, V, Universal paste, sendshortcut, SHIFT, Insert,
+# bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
+# bindd = SUPER CTRL, V, Clipboard manager, exec, omarchy-launch-walker -m clipboard
+
+# # Captures
+# bindd = , PRINT, Screenshot with editing, exec, omarchy-cmd-screenshot
+# bindd = SHIFT, PRINT, Screenshot to clipboard, exec, omarchy-cmd-screenshot smart clipboard
+# bindd = ALT, PRINT, Screenrecording, exec, omarchy-menu screenrecord
+# bindd = SUPER, PRINT, Color picker, exec, pkill hyprpicker || hyprpicker -a
