--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -7,6 +7,7 @@ unbind = ,XF86AudioRaiseVolume
 unbind = ,XF86AudioLowerVolume
 unbind = ALT, XF86AudioRaiseVolume
 unbind = ALT, XF86AudioLowerVolume
+unbind = SUPER SHIFT, BACKSPACE
 
 # Application bindings
 bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)"
@@ -40,6 +41,7 @@ bindd = SUPER, Q, Close window, killactive,
 bindd = CTRL ALT, DELETE, Close all windows, exec, omarchy-hyprland-window-close-all
 
 bindd = SUPER SHIFT, S, Move window to scratchpad, movetoworkspacesilent, special:scratchpad
+bindd = SUPER SHIFT, BACKSPACE, Toggle focus mode, exec, $HOME/.config/hypr/ChangeBlur.sh
 
 # Invert volume controls
 bindeld = ,XF86AudioRaiseVolume, Volume up precise, exec, $osdclient --output-volume +2
