--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -16,6 +16,7 @@ bindd = SUPER, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT, B, Neflix (Opera), exec, opera
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
+bindd = SUPER, D, Discord, exec, discord
 bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora --enable-wayland-ime
