--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,8 +27,10 @@ cursor_trail_decay 0.1 0.25
 # Keybindings
 map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
-map ctrl+shift+d remote_control scroll-window 0.5p
-map ctrl+shift+u remote_control scroll-window 0.5p-
+map ctrl+d remote_control scroll-window 0.5p
+map ctrl+u remote_control scroll-window 0.5p-
+map --when-focus-on var:in_editor ctrl+d
+map --when-focus-on var:in_editor ctrl+u
 
 # Allow remote access
 allow_remote_control yes
