--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -44,6 +44,8 @@ bindd = CTRL ALT, DELETE, Close all windows, exec, omarchy-hyprland-window-close
 bindd = SUPER SHIFT, S, Move window to scratchpad, movetoworkspacesilent, special:scratchpad
 bindd = SUPER SHIFT, BACKSPACE, Toggle focus mode, exec, $HOME/.config/hypr/ChangeBlur.sh
 
+bindd = SUPER CTRL ALT, SPACE, Random Theme, exec, $HOME/dotfiles/RandomTheme.sh
+
 # Invert volume controls
 bindeld = ,XF86AudioRaiseVolume, Volume up precise, exec, $osdclient --output-volume +1
 bindeld = ,XF86AudioLowerVolume, Volume down precise, exec, $osdclient --output-volume -1
