--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -13,8 +13,8 @@ hide_window_decorations yes
 confirm_os_window_close 0
 background_opacity 0.8
 
-# foreground #dddddd
-# background #000000
+foreground #dddddd
+background #000000
 
 selection_foreground none
 selection_background none
