--- a/hypr/.config/hypr/autostart.conf
+++ b/hypr/.config/hypr/autostart.conf
@@ -1,5 +1,5 @@
 # Extra autostart processes
 # exec-once = uwsm-app -- my-service
 exec = hyprshade on vibrance2
-exec-once = ~/dotfiles/RandomTheme.sh
+# exec-once = ~/dotfiles/RandomTheme.sh
 exec-once = ~/dotfiles/RandomBG.sh
