--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,8 +29,18 @@ map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
 map ctrl+d remote_control scroll-window 0.5p
 map ctrl+u remote_control scroll-window 0.5p-
+map ctrl+shift+d remote_control scroll-window 0.5p
+map ctrl+shift+u remote_control scroll-window 0.5p-
 map --when-focus-on var:in_editor ctrl+d
 map --when-focus-on var:in_editor ctrl+u
+map --when-focus-on var:in_editor ctrl+up
+map --when-focus-on var:in_editor ctrl+down
+map --when-focus-on var:in_editor ctrl+left
+map --when-focus-on var:in_editor ctrl+right
+map --when-focus-on var:in_editor ctrl+shift+up
+map --when-focus-on var:in_editor ctrl+shift+down
+map --when-focus-on var:in_editor ctrl+shift+left
+map --when-focus-on var:in_editor ctrl+shift+right
 
 # Allow remote access
 allow_remote_control yes
