--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -25,12 +25,10 @@ cursor_trail 1
 cursor_trail_decay 0.1 0.25
 
 # Keybindings
-map ctrl+insert copy_to_clipboard
-map shift+insert paste_from_clipboard
-map ctrl+shift+d remote_control scroll-window 0.5p
-map ctrl+shift+u remote_control scroll-window 0.5p-
-map --when-focus-on var:in_editor ctrl+shift+d
-map --when-focus-on var:in_editor ctrl+shift+u
+map ctrl+d remote_control scroll-window 0.5p
+map ctrl+u remote_control scroll-window 0.5p-
+map --when-focus-on var:in_editor ctrl+d
+map --when-focus-on var:in_editor ctrl+u
 map --when-focus-on var:in_editor ctrl+up
 map --when-focus-on var:in_editor ctrl+down
 map --when-focus-on var:in_editor ctrl+left
