--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -19,27 +19,21 @@ bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, D, Discord, exec, discord
 bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora --enable-wayland-ime
-bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
 # bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
-bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
-bindd = SUPER SHIFT ALT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
+bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
 bindd = SUPER, Y, YouTube, exec, xdg-open "https://youtube.com/feed/subscriptions"
 bindd = SUPER, W, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 bindd = SUPER, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
-bindd = SUPER ALT, G, Signal, exec, omarchy-launch-or-focus ^signal$ "uwsm-app -- signal-desktop"
-bindd = SUPER SHIFT, P, Google Photos, exec, omarchy-launch-or-focus-webapp "Google Photos" "https://photos.google.com/"
 
 # My bindings
+bindd = SUPER, Q, Close window, killactive,
+bindd = CTRL ALT, DELETE, Close all windows, exec, omarchy-hyprland-window-close-allGoogle Photos
+
 bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
 bindd = SUPER, R, Launch apps, exec, omarchy-launch-walker
-
-bindd = SUPER, Q, Close window, killactive,
-bindd = CTRL ALT, DELETE, Close all windows, exec, omarchy-hyprland-window-close-all
 
 bindd = SUPER SHIFT, S, Move window to scratchpad, movetoworkspacesilent, special:scratchpad
 bindd = SUPER SHIFT, BACKSPACE, Toggle focus mode, exec, $HOME/.config/hypr/ChangeBlur.sh
