--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -8,6 +8,7 @@ unbind = ,XF86AudioLowerVolume
 unbind = ALT, XF86AudioRaiseVolume
 unbind = ALT, XF86AudioLowerVolume
 unbind = SUPER SHIFT, BACKSPACE
+unbind = SUPER CTRL, V
 
 # Application bindings
 bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)"
@@ -38,7 +39,9 @@ bindd = SUPER, R, Launch apps, exec, omarchy-launch-walker
 bindd = SUPER SHIFT, S, Move window to scratchpad, movetoworkspacesilent, special:scratchpad
 bindd = SUPER SHIFT, BACKSPACE, Toggle focus mode, exec, $HOME/.config/hypr/ChangeBlur.sh
 
-bindd = SUPER CTRL ALT, SPACE, Random Theme, exec, $HOME/dotfiles/RandomTheme.sh
+bindd = SUPER CTRL, C, Clipboard manager, exec, omarchy-launch-walker -m clipboard
+
+bindd = SUPER CTRL ALT, SPACE, Random Theme, exec, $HOME/dotfiles/RandomTheme.sh
 
 # Invert volume controls
 bindeld = ,XF86AudioRaiseVolume, Volume up precise, exec, $osdclient --output-volume +1
@@ -47,12 +50,6 @@ bindeld = ALT, XF86AudioRaiseVolume, Volume up, exec, $osdclient --output-volume
 bindeld = ALT, XF86AudioLowerVolume, Volume down, exec, $osdclient --output-volume lower
 
 ### Reminders
-
-# # Copy / Paste
-# bindd = SUPER, C, Universal copy, sendshortcut, CTRL, Insert,
-# bindd = SUPER, V, Universal paste, sendshortcut, SHIFT, Insert,
-# bindd = SUPER, X, Universal cut, sendshortcut, CTRL, X,
-# bindd = SUPER CTRL, V, Clipboard manager, exec, omarchy-launch-walker -m clipboard
 
 # # Captures
 # bindd = , PRINT, Screenshot with editing, exec, omarchy-cmd-screenshot
