--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -1,4 +1,8 @@
-# Change the default Omarchy look'n'feel
+## Change the default Omarchy look'n'feel
+
+# Spawn Spotify & Discord on last workspaces
+windowrule = workspace 9, class:[sS]potify
+windowrule = workspace 10, class:[dD]iscord
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
