--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -2,7 +2,7 @@
 
 # Spawn Spotify & Discord on last workspaces
 windowrule = workspace 9, class:[sS]potify
-windowrule = workspace 10, class:[dD]iscord
+windowrule = workspace 10, class:[vV]esktop
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
