--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -14,7 +14,7 @@ unbind = SUPER CTRL, V
 bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, E, File manager, exec, uwsm-app -- thunar
 bindd = SUPER, B, Browser, exec, omarchy-launch-browser
-bindd = SUPER SHIFT, B, Neflix (Opera), exec, opera
+bindd = SUPER SHIFT, B, Neflix (Opera), exec, omarchy-launch-or-focus opera
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, D, Discord, exec, omarchy-launch-or-focus vesktop
