--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -1,8 +1,8 @@
 ## Change the default Omarchy look'n'feel
 
 # Spawn Spotify & Discord on last workspaces
-windowrule = workspace 9, class:[sS]potify
-windowrule = workspace 10, class:[vV]esktop
+windowrule = workspace 9, match:class [sS]potify
+windowrule = workspace 10, match:class [vV]esktop
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
