--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -18,7 +18,6 @@ bindd = SUPER SHIFT, B, Neflix (Opera), exec, omarchy-launch-or-focus opera
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, D, Discord, exec, omarchy-launch-or-focus vesktop
-bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
 # bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 
@@ -31,7 +30,7 @@ bindd = SUPER, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google 
 
 # My bindings
 bindd = SUPER, Q, Close window, killactive,
-bindd = CTRL ALT, DELETE, Close all windows, exec, omarchy-hyprland-window-close-allGoogle Photos
+bindd = CTRL ALT, DELETE, Close all windows, exec, omarchy-hyprland-window-close-all
 
 bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
 bindd = SUPER, R, Launch apps, exec, omarchy-launch-walker
