Disable Hyprshade during captures

--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -9,6 +9,9 @@ unbind = ALT, XF86AudioRaiseVolume
 unbind = ALT, XF86AudioLowerVolume
 unbind = SUPER SHIFT, BACKSPACE
 unbind = SUPER CTRL, V
+unbind = , PRINT
+unbind = SHIFT, PRINT
+unbind = SUPER, PRINT
 
 # Application bindings
 bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)"
@@ -48,10 +51,8 @@ bindeld = ,XF86AudioLowerVolume, Volume down precise, exec, $osdclient --output-
 bindeld = ALT, XF86AudioRaiseVolume, Volume up, exec, $osdclient --output-volume raise
 bindeld = ALT, XF86AudioLowerVolume, Volume down, exec, $osdclient --output-volume lower
 
-### Reminders
-
 # # Captures
-# bindd = , PRINT, Screenshot with editing, exec, omarchy-cmd-screenshot
-# bindd = SHIFT, PRINT, Screenshot to clipboard, exec, omarchy-cmd-screenshot smart clipboard
+bindd = ,Print, Screenshot, exec, shader=$(hyprshade current) && hyprshade off && omarchy-cmd-screenshot && hyprshade on "${shader}"
+bindd = SHIFT, Print, Screenshot to Clipboard, exec, shader=$(hyprshade current) && hyprshade off && omarchy-cmd-screenshot smart clipboard && hyprshade on "${shader}"
+bindd = SUPER, Print, Screenshot, exec, shader=$(hyprshade current) && hyprshade off && pkill hyprpicker || hyprpicker -a && hyprshade on "${shader}"
 # bindd = ALT, PRINT, Screenrecording, exec, omarchy-menu screenrecord
-# bindd = SUPER, PRINT, Color picker, exec, pkill hyprpicker || hyprpicker -a
