Toggle Vibrance bind for recordings

--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -51,8 +51,10 @@ bindeld = ,XF86AudioLowerVolume, Volume down precise, exec, $osdclient --output-
 bindeld = ALT, XF86AudioRaiseVolume, Volume up, exec, $osdclient --output-volume raise
 bindeld = ALT, XF86AudioLowerVolume, Volume down, exec, $osdclient --output-volume lower
 
-# # Captures
-bindd = ,Print, Screenshot, exec, shader=$(hyprshade current) && hyprshade off && omarchy-cmd-screenshot && hyprshade on "${shader}"
+# Captures
+bindd = , Print, Screenshot, exec, shader=$(hyprshade current) && hyprshade off && omarchy-cmd-screenshot && hyprshade on "${shader}"
 bindd = SHIFT, Print, Screenshot to Clipboard, exec, shader=$(hyprshade current) && hyprshade off && omarchy-cmd-screenshot smart clipboard && hyprshade on "${shader}"
 bindd = SUPER, Print, Screenshot, exec, shader=$(hyprshade current) && hyprshade off && pkill hyprpicker || hyprpicker -a && hyprshade on "${shader}"
 # bindd = ALT, PRINT, Screenrecording, exec, omarchy-menu screenrecord
+
+bindd = SUPER ALT, N, Toggle Vibrance, exec, hyprshade toggle --fallback vibrance2
