--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -42,6 +42,7 @@ map --when-focus-on var:in_editor ctrl+shift+right
 
 # Allow remote access
 allow_remote_control yes
+listen_on unix:@mykitty
 
 # Aesthetics
 cursor_shape block
