--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -25,6 +25,7 @@ cursor_trail 1
 cursor_trail_decay 0.1 0.25
 
 # Keybindings
+map shift+ctrl+u
 map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
 map ctrl+d remote_control scroll-window 0.5p
