--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -30,6 +30,7 @@ map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
 map ctrl+d remote_control scroll-window 0.5p
 map ctrl+u remote_control scroll-window 0.5p-
+map --when-focus-on var:in_editor shift+ctrl+u
 map --when-focus-on var:in_editor ctrl+d
 map --when-focus-on var:in_editor ctrl+u
 map --when-focus-on var:in_editor ctrl+up
